# Programacion2

Lab03_2023_2_20226576_Altamirano_Rodrigo/PunterosGenericos_2023_2/: CMakeLists.txt  main.cpp
Lab03_2023_2_20226576_Altamirano_Rodrigo/PunterosGenericos_2023_2/Bibliotecas/: MuestraPunteros.cpp  MuestraPunteros.h  PunterosGenericos.cpp  PunterosGenericos.h
Lab04_2022_2_20226576_Altamirano_Rodrigo/LAB06_TrasladaPila/: BibliotecaPilaGenerica.cpp  BibliotecaPilaGenerica.h  CMakeLists.txt  PilaConEnteros.cpp  PilaConEnteros.h  PilaConRegistros.cpp  PilaConRegistros.h  main.cpp
Lab04_2024_1_20226576_Altamirano_Rodrigo/ListaGenerica/: CMakeLists.txt  FuncionesEnteras.h  FuncionesRegistros.cpp  main.cpp
Lab04_2025_1_20226576_Altamirano_Rodrigo/ListaGenerica/: BibliotecaEnteros.cpp  BibliotecaEnteros.h  BibliotecaGenerica.cpp  BibliotecaGenerica.h  BibliotecaRegistros.cpp  BibliotecaRegistros.h  CMakeLists.txt  main.cpp
Lab05_2025_1_20226576_Altamirano_Rodrigo/LaboratorioIntegrador/: BibliotecaConductores.h  BibliotecaGenerica.h  BibliotecaInfracciones.cpp  BibliotecaInfracciones.h  CMakeLists.txt  main.cpp
Lab06_2021_2_20226576_Altamirano_Rodrigo/LAB06_ColaPrioridad/: BibImpresion.cpp  CMakeLists.txt
Lab06_2023_2_20226576_Altamirano_Rodrigo/LAB06_PREG01_CLASES/: Almacen.h  CMakeLists.txt  Cliente.cpp  Cliente.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  Pedido.cpp  Pedido.h  Producto.cpp  Producto.h  ProductoEntregado.cpp  ProductoEntregado.h  main.cpp
Lab07_2021_1_20226576_Altamirano_Rodrigo/LAB07_PREG01_CLASES/: CMakeLists.txt  Conductor.cpp  Conductor.h  Falta.cpp  Falta.h  FaltaCond.cpp  FaltaCond.h  Infraccion.cpp  Infraccion.h  main.cpp
Lab07_2024_1_2022676_Altamirano_Rodrigo/LAB07_BIBLIOTECA_HERENCIA/: CMakeLists.txt  main.cpp
Lab07_2024_1_2022676_Altamirano_Rodrigo/LAB07_BIBLIOTECA_HERENCIA/Bibliotecas/: Biblioteca.cpp  Biblioteca.h  Enciclopedia.cpp  Enciclopedia.h  Espacio.cpp  Espacio.h  Estante.cpp  Estante.h  EstanteHorizontal.cpp  EstanteHorizontal.h  EstanteVertical.cpp  EstanteVertical.h  Libro.cpp  Libro.h  Novela.cpp  Novela.h
Lab07_2024_2_20226576_Altamirano_Rodrigo/PREG01/: CMakeLists.txt  main.cpp
Lab07_2024_2_20226576_Altamirano_Rodrigo/PREG01/Bibliotecas/: Bebida.cpp  Bebida.h  Comanda.cpp  Comanda.h  Entrada.h  Producto.cpp  Producto.h  Restaurante.cpp  Restaurante.h
Lab07_2024_2_20226576_Altamirano_Rodrigo/PREG02/: CMakeLists.txt  main.cpp
Lab07_2024_2_20226576_Altamirano_Rodrigo/PREG02/Bibliotecas/: Comanda.cpp  Comanda.h  Entrada.cpp  PlatoFondo.cpp  PlatoFondo.h  Producto.cpp  Producto.h  Restaurante.cpp  Restaurante.h
Lab07_2025_1_20226576_Altamirano_Rodrigo/HERENCIA/: CMakeLists.txt  main.cpp
Lab07_2025_1_20226576_Altamirano_Rodrigo/HERENCIA/Bibliotecas/: CentralDeMonitoreo.cpp  CentralDeMonitoreo.h  Drone.cpp  Drone.h  DroneEstacionamiento.cpp  DroneEstacionamiento.h  DroneSemaforo.cpp  DroneSemaforo.h  DroneVelocidad.cpp  DroneVelocidad.h  Flota.cpp  Flota.h  Infraccion.cpp  Infraccion.h  MinisterioDeTransportes.cpp  MinisterioDeTransportes.h
Lab07_2025_2_20226576_Altamirano_Rodrigo/Streamers_Herencia/: CMakeLists.txt  main.cpp
Lab07_2025_2_20226576_Altamirano_Rodrigo/Streamers_Herencia/Bibliotecas/: GestorStreamers.cpp  GestorStreamers.h  Metrica.cpp  Metrica.h  MetricaBasica.cpp  MetricaBasica.h  MetricaCalidad.cpp  MetricaCalidad.h  MetricaEngagement.cpp  MetricaEngagement.h  Streamer.cpp  Streamer.h  StreamerGratuito.cpp  StreamerGratuito.h  StreamerPago.cpp  StreamerPago.h
Lab08_2023_2_20226576_Altamirano_Rodrigo/LAB08_PREG01/: CMakeLists.txt  main.cpp
Lab08_2023_2_20226576_Altamirano_Rodrigo/LAB08_PREG01/Bibliotecas/: Camion.cpp  Camion.h  Flota.cpp  Flota.h  Furgon.cpp  Furgon.h  LVehiculos.cpp  LVehiculos.h  NPedido.cpp  NPedido.h  NodoLista.cpp  NodoLista.h  Vehiculo.cpp  Vehiculo.h
Lab08_2023_2_20226576_Altamirano_Rodrigo/LAB08_PREG02/: CMakeLists.txt  main.cpp
Lab08_2023_2_20226576_Altamirano_Rodrigo/LAB08_PREG02/Bibliotecas/: Camion.h  Flota.cpp  Flota.h  Furgon.cpp  Furgon.h  LVehiculos.cpp  LVehiculos.h  NPedido.cpp  NPedido.h  Vehiculo.cpp  Vehiculo.h
Lab08_2024_1_20226576_Altamirano_Rodrigo/LAB08_POLITAD/: CMakeLists.txt  main.cpp
Lab08_2024_1_20226576_Altamirano_Rodrigo/LAB08_POLITAD/Bibliotecas/: Biblioteca.cpp  Biblioteca.h  Enciclopedia.cpp  Enciclopedia.h  Estante.cpp  Estante.h  Libro.cpp  Libro.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  Novela.cpp  Novela.h  Revista.cpp  Revista.h
Lab08_2024_2_20226576_Altamirano_Rodrigo/PREG01_LAB08/: CMakeLists.txt  main.cpp
Lab08_2024_2_20226576_Altamirano_Rodrigo/PREG01_LAB08/Bibliotecas/: Bebida.cpp  Bebida.h  Cola.cpp  DetalleComanda.cpp  DetalleComanda.h  Entrada.cpp  Entrada.h  Nodo.cpp  PlatoFondo.cpp  PlatoFondo.h  Producto.h  Restaurante.cpp  Restaurante.h
Lab08_2024_2_20226576_Altamirano_Rodrigo/PREG02_LAB08/: CMakeLists.txt  main.cpp
Lab08_2024_2_20226576_Altamirano_Rodrigo/PREG02_LAB08/Bibliotecas/: Bebida.cpp  Bebida.h  Cola.h  DetalleComanda.cpp  DetalleComanda.h  Entrada.cpp  Entrada.h  Nodo.h  PlatoFondo.cpp  PlatoFondo.h  (+4 more)
Lab08_2025_1_20226576_Altamirano_Rodrigo/Lab08_Arbol_Drones_Parte1/: CMakeLists.txt  main.cpp
Lab08_2025_1_20226576_Altamirano_Rodrigo/Lab08_Arbol_Drones_Parte2/: CMakeLists.txt  main.cpp
Lab09_2021_1_20226576_Altamirano_Rodrigo/Lab09_Parte01/: CMakeLists.txt  main.cpp
Lab09_2023_1_20226576_Altamirano_Rodrigo/PREG01_LAB09/: CMakeLists.txt  main.cpp
Lab09_2023_1_20226576_Altamirano_Rodrigo/PREG02_LAB09/: CMakeLists.txt  main.cpp
Lab09_2023_2_20226576_Altamirano_Rodrigo/LAB09_PREG01/: CMakeLists.txt  main.cpp
Lab09_2023_2_20226576_Altamirano_Rodrigo/LAB09_PREG02/: CMakeLists.txt  main.cpp
Lab09_2024_1_20226576_Altamirano_Rodrigo/LAB09_ABBSTL/: CMakeLists.txt  main.cpp
Lab09_2024_2_20226576_Altamirano_Rodrigo/PREG01_LAB09/: CMakeLists.txt  main.cpp
Lab09_2025_1_20226576_Altamirano_Rodrigo/Lab09_STL/: CMakeLists.txt  main.cpp
Lab09_2025_2_20226576_Altamirano_Rodrigo/Laboratorio09_STL/: CMakeLists.txt  main.cpp
Lab10_2020_1_20226576_Altamirano_Rodrigo/Pregunta01/: CMakeLists.txt  main.cpp
(+472 files in other folders)
